gitops/apps/k8s.dingle.bop/dinglebop/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dinglebop
  namespace: dinglebop
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cluster-gateway
      namespace: agentgateway
      sectionName: https
  hostnames:
    - dinglebop.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 8080
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: frontend
          port: 8080
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dinglebop-redirect-http-to-https
  namespace: dinglebop
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cluster-gateway
      namespace: agentgateway
      sectionName: http-public
  hostnames:
    - dinglebop.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
